--- a/css/styles.css
+++ b/css/styles.css
@@ -38,3 +38,18 @@ body{
 .navbar-dark{
 	background: #3b4b21; /*DarkOliveGreen Darker*/
 }
+
+.carousel {
+    background:#3b4b21;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
